# llm-station

./: .cursorrules  CHANGELOG.md  CLAUDE.md  DOCUMENTATION.md  GOOGLE.md  MANIFEST.in  OPENAI.md  README.md  pyproject.toml  requirements.txt
examples/: agent_demo.py  agent_with_logging.py  batch_api_demo.py  batch_cli.py  claude_quickstart.py  google_quickstart.py  logging_cli_demo.py  logging_demo.py  openai_quickstart.py  quickstart.py
llm_station/batch/: __init__.py  anthropic_batch.py  google_batch.py  openai_batch.py
llm_station/logging/: __init__.py
llm_station/tools/code_execution/: anthropic.py  openai.py
llm_station/tools/image_generation/: __init__.py  google.py  openai.py
llm_studio/: __init__.py
llm_studio/agent/: runtime.py
llm_studio/batch/: __init__.py  anthropic_batch.py  openai_batch.py
llm_studio/cli/: __init__.py  logging_cli.py
llm_studio/logging/: agent_logger.py
llm_studio/models/: anthropic.py  base.py  google.py  mock.py  openai.py  registry.py
llm_studio/schemas/: messages.py  tooling.py
llm_studio/tools/: __init__.py  base.py  fetch_url.py  json_format.py  registry.py
llm_studio/tools/code_execution/: __init__.py  anthropic.py  google.py  openai.py
llm_studio/tools/image_generation/: __init__.py  google.py  openai.py
scripts/: publish_to_pypi.py
tests/: test_anthropic.py  test_batch_processors.py  test_claude.py  test_google.py  test_google_code_execution.py  test_google_url_context.py  test_integration.py  test_openai.py  test_openai_mock.py  test_providers.py  test_smart_tools.py
(+5 files in other folders)
